--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@octokit/rest": "^18.3.5",
     "apollo-server-micro": "^2.21.2",
+    "class-validator": "^0.13.1",
     "framer-motion": "^3.10.3",
     "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-tsparticles": "^1.20.1",
-    "tsparticles": "^1.19.3"
+    "reflect-metadata": "^0.1.13",
+    "tsparticles": "^1.19.3",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
@@ -39,6 +43,7 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.2.2",
+    "babel-plugin-parameter-decorator": "^1.0.16",
     "tsconfig-paths-webpack-plugin": "^3.4.1",
     "typescript": "4.0.5"
   },
