--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "forceConsistentCasingInFileNames": false,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": ["dom", "es2017"],
+    "lib": ["dom", "es2018", "esnext.asynciterable"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -17,6 +17,8 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["./src/components/*"],
