--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "class-validator": "^0.13.1",
     "framer-motion": "^3.10.3",
     "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-tsparticles": "^1.20.1",
     "reflect-metadata": "^0.1.13",
+    "swr": "^0.5.4",
     "tsparticles": "^1.19.3",
     "type-graphql": "^1.1.1"
   },
