--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
+      "@/constants/*": ["./src/constants/*"],
+      "@/graphql/*": ["./src/graphql/*"],
       "@/components/*": ["./src/components/*"],
       "@/atoms/*": ["./src/components/atoms/*"],
       "@/molecules/*": ["./src/components/molecules/*"],
