--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
-  "name": "with-chakra-ui-typescript",
+  "name": "damianmorten.com",
   "version": "1.0.0",
+  "author": "Damian Morten",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "type-check": "tsc --pretty --noEmit",
+    "format": "prettier --write src/.",
+    "lint": "eslint . --ext ts,tsx,js,jsx",
+    "lint:fix": "yarn lint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn run type-check"
+    }
+  },
+  "lint-staged": {
+    "*.(ts|tsx)": [
+      "yarn format",
+      "eslint . --ext ts,tsx"
+    ]
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
@@ -44,8 +61,16 @@
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-parameter-decorator": "^1.0.16",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-react": "^7.23.1",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "tsconfig-paths-webpack-plugin": "^3.4.1",
     "typescript": "4.0.5"
   },
