--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@/graphql/*": ["./src/graphql/*"],
       "@/components/*": ["./src/components/*"],
       "@/atoms/*": ["./src/components/atoms/*"],
+      "@/hooks/*": ["src/hooks/*"],
       "@/molecules/*": ["./src/components/molecules/*"],
       "@/organisms/*": ["./src/components/organisms/*"],
     },
