--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@octokit/rest": "^18.3.5",
+    "@types/lodash": "^4.14.168",
     "apollo-server-micro": "^2.21.2",
     "class-validator": "^0.13.1",
     "framer-motion": "^3.10.3",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
