build(tsconfig): add '__mocks__' directory alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,12 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
-      "@/config/*": ["./src/config/*"],
-      "@/graphql/*": ["./src/graphql/*"],
-      "@/components/*": ["./src/components/*"],
       "@/atoms/*": ["./src/components/atoms/*"],
+      "@/config/*": ["./src/config/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/graphql/*": ["./src/graphql/*"],
       "@/hooks/*": ["./src/hooks/*"],
+      "@/__mocks__/*": ["./__mocks__/*"],
       "@/molecules/*": ["./src/components/molecules/*"],
       "@/organisms/*": ["./src/components/organisms/*"],
     },
