feat(SEO): add basic Social/OpenGraph SEO tags
BREAKING CHANGE: app now requires a .env file with 'ORIGIN' var

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "@/__mocks__/*": ["./__mocks__/*"],
       "@/molecules/*": ["./src/components/molecules/*"],
       "@/organisms/*": ["./src/components/organisms/*"],
+      "@/templates/*": ["./src/components/templates/*"],
     },
   },
   "exclude": ["node_modules"],
