build(scripts): use --fix arg in LintStaged eslint script

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "lint-staged": {
     "*.(ts|tsx)": [
       "yarn format",
-      "eslint"
+      "eslint --fix"
     ]
   },
   "dependencies": {
