--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-tsparticles": "^1.24.3",
     "reflect-metadata": "^0.1.13",
     "swr": "^0.5.4",
