--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@octokit/rest": "^18.3.5",
+    "@types/bluebird": "^3.5.33",
     "@types/lodash": "^4.14.168",
     "apollo-server-micro": "^2.21.2",
+    "bluebird": "^3.7.2",
     "class-validator": "^0.13.1",
     "framer-motion": "^3.10.3",
     "graphql": "^15.5.0",
